// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`registration should not register an user with the same email 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: This email is already in use],
  ],
}
`;

exports[`registration should not register an user with the same username 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: This username is already in use],
  ],
}
`;

exports[`registration should register an user 1`] = `
Object {
  "data": Object {
    "registerUser": Object {
      "email": "new_user@email.com",
      "name": "New User",
      "username": "new_user",
    },
  },
}
`;
